# NovoTax

./: .dockerignore  .gitignore  LICENSE  NovoTax.Dockerfile  NovoTax_ph.Dockerfile  README.md  main.nf  main.py  nextflow.config  novotax_ph.py  pyproject.toml  samples.tsv  todo.txt
NovoTax/: cli.py  novotax.py
NovoTax/core/: classify.py  gtdb.py  mmseqs.py  mmseqs_search.py
NovoTax/dbs/: build_mmseqs.py  construct_databases.py  construct_genus_db.py  create_db.py  ncbi.py
assets/: no_host_filter.txt
assets/dbs/: crap  crap.index  crap.lookup  crap.source  crap_h  crap_h.index
dbs/: setup_downloads.sh
docker/: Cascadia.Dockerfile  NovoTax.Dockerfile  NovoTax_ph.Dockerfile  XuanjiNovo.Dockerfile  novotax_env.yaml
docs/: example.md  index.md  installation.md  intro.md  tools.md  usage.md
examples/: samples.tsv  samples_extended.tsv
scripts/: samples_extended.tsv  setup_example_data.sh
