[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novotax"
version = "0.1.0"
description = "NovoTax: taxonomic identification from proteomics-derived peptide results"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dennis Svedberg" }
]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyyaml>=6.0"
]

[project.scripts]
novotax = "NovoTax.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["NovoTax*"]
